--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="148dp"
         android:background="@android:color/holo_blue_light"
+        android:onClick="guessButton"
         android:text="@string/button"
         android:textAlignment="center"
         android:textAllCaps="true"
